Fixed translation mistakes > TR_tr.yml
Fixed translation mistakes and did some additional translation.

--- a/ServerAuth/resources/languages/TR_tr.yml
+++ b/ServerAuth/resources/languages/TR_tr.yml
@@ -1,14 +1,14 @@
 #ServerAuth plugin Turkish language file
-#Translation by NightRichTR (Old Nick: Gecekatili)
+#Translation by NightRichTR (Old Nick: Gecekatili) and sanalika (Mert Yucedag)
 ---
-join-message: "&aServerAuth §atarafından sağlanan kimlik doğrulama eklentisi."
-single-auth: "&cBu isimle sunucuya zaten kayıt olunmuş!"
-mysql-success: "&aServerAuth ile MySQL bağlantısı başarıyla kuruldu!"
-mysql-restored: "&aMySQL bağlantısı restore ediliyor!"
+join-message: "&aServerAuth §beklentisi tarafından sağlanan kimlik doğrulama sistemi."
+single-auth: "&cBu isimde bir kullanıcı sunucuya zaten kayıt olmuş!"
+mysql-success: "&aServerAuth, MySQL veritabanına başarıyla bağlandı!"
+mysql-restored: "&aMySQL bağlantısı sıfırlandı!"
 config-reloaded: "&aYapılandırma dosyası yeniden yüklendi!"
 operation-cancelled: "&cİşlem iptal edildi."
 login:
-  message: "&cGiriş yapmak içim lütfen /login <şifre> komutunu kullanınız."
+  message: "&cGiriş yapmak için lütfen /login <şifre> komutunu kullanınız."
   disabled: "&cGiriş komutu bu sunucuda devre dışı bırakılmış."
   command: "&cKullanımı: /login <şifre>"
   ip-login: "&9IP Adresi ile otomatik giriş yapıldı."
@@ -24,51 +24,51 @@ register:
   command: "&cKullanımı: /register <şifre>"
   command-conf: "&cKullanımı: /register <şifre> <şifreDoğrula>"
   register-success: "&aBaşarıyla kayıt olundu!"
-  register-timeout: "&cKayıt olumu zaman aşımına uğradı."
+  register-timeout: "&cKayıt işlemi zaman aşımına uğradı."
   already-registered: "&aZaten kayıt olmuşsun."
 changepassword:
   disabled: "&cŞifre değistirme bu sunucuda devre dışı bırakılmış."
-  login-required: "&cŞifre değiştirebilmek için ilk önce kayıt olmalısın."
+  login-required: "&cŞifreni değiştirebilmek için ilk önce giriş yapmalısın."
   command: "&cKullanımı: /changepassword <yeniŞifre>"
-  command-conf: "&cKullanımı: /changepassword <yeniŞifre> <şifreDoğrula>"
+  command-conf: "&cKullanımı: /changepassword <yeniŞifre> <yeniŞifreDoğrula>"
   command-cons: "&cKullanımı: /changepassword <oyuncu> <yeniŞifre>"
   changepassword-success: "&aŞifre değiştirildi!"
-  changepassword-cons-success: "&b{PLAYER} &aiçin şifresi, &b{PASSWORD} &aolarak ayarlandı."
+  changepassword-cons-success: "&b{PLAYER} &aoyuncusunun şifresi &b{PASSWORD} &aolarak ayarlandı."
 logout:
   disabled: "&cÇıkış yapma bu sunucuda devre dışı bırakılmış."
   logout-success: "&aÇıkış yapıldı."
 unregister:
-  disabled: "&cKayıt iptali bu sunucuda devre dışı bırakılmış."
+  disabled: "&cKayıt silme bu sunucuda devre dışı bırakılmış."
   login-required: "&cKaydınızı silmek için ilk önce giriş yapmalısınız."
   command: "&cKullanımı: /unregister <şifre>"
   command-cons: "&cKullanımı: /unregister <oyuncu>"
   unregister-success: "&aKaydınız silindi!"
   unregister-success-3rd: "&aOyuncunun kaydı silindi!"
 importers:
-  same-provider: "&cAynı sağlayıcıdan, veriyi içeri aktaramazsınız."
+  same-provider: "&cAynı sağlayıcıdan gelen veriyi içeri aktaramazsınız."
   init-import: "&aVeri içe aktarılıyor..."
   data-not-found: "&c{PLUGIN} eklentisinin hesap verileri bulunamadı!"
-  data-invalid: "&c{PLUGIN} eklentisinin hesap verileri, geçersiz durumda."
+  data-invalid: "&c{PLUGIN} eklentisinin hesap verileri geçersiz durumda."
   db-usage-basic: "&cKullanımı: /serverauth import {ID} <host> <kullanıcı> <veritabanı> [şifre] [port]"
   db-usage-advanced: "&cKullanımı: /serverauth import {ID} <host> <kullanıcı> <veritabanı> [şifre] [tablo_öneki] [port]"
-  yaml: "&a{PLUGIN} yaml dosyasından {PROVIDER} hesabına, {COUNT} adet profil başarıyla alındı!"
-  json: "&a{PLUGIN} json dosyasından {PROVIDER} hesabına, {COUNT} adet profil başarıyla alındı!"
-  mysql: "&a{PLUGIN} mysql veritabanından {PROVIDER} hesabına, {COUNT} adet profil başarıyla alındı!"
-  sqlite: "&a{PLUGIN} sqlite veritabanından {PROVIDER} hesabına, {COUNT} adet profil başarıyla alındı!"
+  yaml: "&a{COUNT} adet profil {PLUGIN} yaml dosyasından {PROVIDER} hesabına başarıyla aktarıldı!"
+  json: "&a{COUNT} adet profil {PLUGIN} json dosyasından {PROVIDER} hesabına başarıyla aktarıldı!"
+  mysql: "&a{COUNT} adet profil {PLUGIN} mysql veritabanından {PROVIDER} hesabına başarıyla aktarıldı!"
+  sqlite: "&a{COUNT} adet profil {PLUGIN} sqlite veritabanından {PROVIDER} hesabına başarıyla aktarıldı!"
 help:
-   1: "&b=> &aKullanılabilir Komutlar &b<="
-   2: "&a/changepassword &b=>&a Hesabınızın şifresini değiştirir"
+   1: "&b=> &aMevcut Komutlar &b<="
+   2: "&a/changepassword &b=>&a Hesabınızın şifresini değiştirin"
    3: "&a/login &b=>&a Hesabınıza giriş yapın"
    4: "&a/logout &b=>&a Hesabınızdan çıkış yapın"
    5: "&a/register &b=>&a Hesabınızla kayıt olun"
-   6: "&a/serverauth help &b=>&a Eklentinin yardım sayfasını görüntüle"
-   7: "&a/serverauth info &b=>&a Eklentinin infosunu görüntüle"
+   6: "&a/serverauth help &b=>&a Eklentinin yardım sayfasını göster"
+   7: "&a/serverauth info &b=>&a Eklentinin bilgilerini göster"
    8: "&a/serverauth import &b=>&a Başka eklentilerin hesap verilerini, ServerAuth veri sağlayıcılarından veya diğer yetkili eklentilerden içe aktarır"
-   9: "&a/serverauth reload &b=>&a Yapılandırma dosyasını yenile"
+   9: "&a/serverauth reload &b=>&a Yapılandırma dosyasını yeniler"
    10: "&a/unregister &b=>&a Hesabınızın kaydını silin"
-   invalid: "&cSubcommand &a{SUBCMD} &cbulunamadı. Kullanabileceğiniz komutları görüntülemek için &a/serverauth help &ckomutunu kullanın"
+   invalid: "&cAltkomut &a{SUBCMD} &cbulunamadı. Kullanabileceğiniz komutları görüntülemek için &a/serverauth help &ckomutunu kullanın"
 errors:
-  generic: "&cBelirlenemeyen bir hata oluştu."
+  generic: "&cBir hata oluştu."
   provider-error: "&eBelirtilen veri sağlayıcısını başlatırken bir hata oluştu. YAML varsayılan veri sağlayıcısı ayarlandı."
   mysql-connect-error: "&cMySQL veritabanına bağlanılamadı. Hata: {ERROR}"
   mysql-database-error: "&cServerAuth veritabanı, MySQL veritabanına oluşturulamadı!"
@@ -77,16 +77,16 @@ errors:
   sqlite-open-error: "&cSQLite3 veritabanını açamadı. Hata: {ERROR}"
   sqlite-query-error: "&SQLite3 sorgusu başarısız oldu.."
   sqlite-tables-error: "&cServerAuth tabloları SQLite3 veritabanında oluşturulamadı!"
-  invalid-hash-algorithm: "&eGeçersiz karma şifreleme algoritması. ServerAuth stabil algoritmasına geçildi."
+  invalid-hash-algorithm: "&eGeçersiz şifreleme algoritması belirtildi. ServerAuth stabil algoritmasına geçildi."
   invalid-provider: "&eGeçersiz veri sağlayıcısı belirlendi! YAML varsayılan veri sağlayıcısı ayarlandı."
   invalid-uuid: "&cUUID'niz geçersiz!"
-  wrong-password: "&cKötü şifre."
+  wrong-password: "&cYanlış Şifre."
   password-no-match: "&cŞifreniz doğrulanamadı."
   password-too-short: "&cŞifreniz çok kısa."
   password-too-long: "&cŞifreniz çok uzun."
-  user-not-registered: "&cİlk önce sunucuya kayıt olun."
+  user-not-registered: "&cSunucuya kayıtlı değilsiniz."
   user-not-registered-3rd: "&cBu oyuncu sunucuya hiç kayıt olmamış."
-  user-not-authenticated: "&cİlk önce sunucuya giriş yapın."
+  user-not-authenticated: "&cSunucuya henüz giriş yapmadınız."
   max-ip-reached: "&cBir IP'den maximum hesap hesap açma sayısına ulaştınız."
   no-permissions: "&cBu komutu kullanmak için yetkilendirilmediniz."
   player-only: "&cBu komutu yanlızca oyunda, oyuncu olarak kullanabilirsiniz."
